# tatemono-map

./: .env.example  .gitignore  PLAN.md  README.md  buildings_master_from_mr_chintai.py  mansion_review_chintai_1616_1619_test.csv  mansion_review_mansions_1616_1619.csv  mansion_review_vacancies_400001_moji_kokurakita.csv  push.ps1  pyproject.toml  pytest.ini  requirements-pdf.txt  requirements.txt  sync.ps1
.tmp/: audit_counts.py  clean_smartview_only.py  run_parse_and_audit.py
docs/: README.md  building_corrections_csv.md  data_contract.md  data_flow_and_sources_of_truth.md  frontend_versions.md  investigation_listings_null_root_cause.md  manual_pdf_ingest.md  ops_ci_testing.md  ops_unmatched_report.md  ops_weekly_checklist_a4.md  roadmap_pr3_auto_add_buildings.md  runbook.md  spec.md  ulucks_phase_a.md  wbs.md
scripts/: backfill_building_age_years.py  buildings_master_from_mr_chintai.py  buildings_master_from_primary_listings.py  check_markdown_newlines.py  check_pages_parity.ps1  dev.ps1  dev_dist.ps1  dev_pageslike.ps1  dev_setup.ps1  dev_sync.ps1  export_public_db.py  git_doctor.ps1  git_push.ps1  git_sync.ps1  ingest_master_import.ps1  mansion_review_crawl_to_csv.py  mansion_review_fetch_chintai_cities1616_1619.py  mansion_review_fetch_city400001.py  mansion_review_fetch_mansion_cities1616_1619.py  mansion_review_html_to_csv.py  manual_stats.py  merge_building_masters_primary_wins.py  merge_duplicate_buildings.ps1  migrate_to_canonical.py  mvp_refresh.ps1  mvp_v1_rebuild_dist.ps1  normalize_building_summaries.py  parse_smartlink_page_to_listings.py  push.ps1  (+23 more)
(+184 files in other folders)
