[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tatemono-map"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "selectolax",
    "playwright",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
